Resolve search block button text overlapping issue. (#66868)
* chore: fix styling.

* chore: style changes.

--- a/packages/block-library/src/search/style.scss
+++ b/packages/block-library/src/search/style.scss
@@ -58,11 +58,9 @@ $button-spacing-y: math.div($grid-unit-15, 2); // 6px
 		// Prevent unintended text wrapping.
 		flex-shrink: 0;
 		max-width: 100%;
-	}
-
-	// Ensure minimum input field width in small viewports.
-	.wp-block-search__button[aria-expanded="true"] {
-		max-width: calc(100% - 100px);
+		box-sizing: border-box;
+		display: flex;
+		justify-content: center;
 	}
 
 	.wp-block-search__inside-wrapper {
